Fixed link in news for release

--- a/documentation/appendix/releasenotes/0.9.x.html
+++ b/documentation/appendix/releasenotes/0.9.x.html
@@ -851,8 +851,8 @@
 
 <h2 id="release-notes---09x">Release Notes - 0.9.x</h2>
 
-<p>We are proud to announce the the release of 0.9. 
-It comprises the following feature highlights:</p>
+<p>We are proud to announce the release of 0.9. 
+Here are some of the major highlights:</p>
 
 <ul>
   <li><strong>Eclipse IoT Toolset</strong> that lets you describe the characteristics and functionalities of devices as Information Models</li>
