--- a/documentation/appendix/releasenotes/0.9.x.html
+++ b/documentation/appendix/releasenotes/0.9.x.html
@@ -356,7 +356,7 @@
   
     <li  >
       
-        <a href="../../../documentation/code-generators/example-codegenerators.html">Example Code Generators</a>
+        <a href="../../../documentation/code-generators/vorto-codegenerators.html">Vorto Code Generators</a>
       
 
     </li>
@@ -858,7 +858,7 @@ Here are some of the major highlights:</p>
   <li><strong>Eclipse IoT Toolset</strong> that lets you describe the characteristics and functionalities of devices as Information Models</li>
   <li><strong>Information Model Repository</strong>, acting as a device description dictionary to lookup and find device cababilities by various criteria</li>
   <li><strong>Generator API</strong> that lets you define the translation rules from Information Models into executable, IoT platform specific source code</li>
-  <li>Many <strong>Example Code Generators</strong> to inspire you to build your own generator as well as illustrate the usage to build an IoT Application.</li>
+  <li>Many <strong>Code Generators</strong> to inspire you to build your own generator as well as illustrate the usage to build an IoT Application.</li>
   <li><strong>Command Line Interface</strong> that lets you lookup, find and publish information models as well as generate code for a selected IoT platform</li>
 </ul>
 
@@ -878,9 +878,9 @@ Here are some of the major highlights:</p>
 
 <p>Vorto Code Generators convert an Information Model into executable IoT platform specific source code. The <strong>Generator API</strong> lets you plug in your own code generator into the toolset. Toolset wizards help you through this process.</p>
 
-<h3 id="example-generators">Example Generators</h3>
+<h3 id="code-generators">Code Generators</h3>
 
-<p>In order to inspire you to build you own generator for your platform, we implemented many <strong>Example Generators</strong>, for example Bosch IoT Things, AWS, ThingWorx and many more. They illustrate the many possibilities of how code generators can be effectively used and act as a blueprint for other generator implementations.</p>
+<p>In order to inspire you to build you own generator for your platform, we implemented many <strong>Code Generators</strong>, for example Bosch IoT Things, AWS, ThingWorx and many more. They illustrate the many possibilities of how code generators can be effectively used and act as a blueprint for other generator implementations.</p>
 
 <p><img src="../../../img/documentation/vorto_repository_generators.png" alt="Generators" width="700px" /></p>
 
