--- a/documentation/code-generators/codegenerators.html
+++ b/documentation/code-generators/codegenerators.html
@@ -356,7 +356,7 @@
   
     <li  >
       
-        <a href="../../documentation/code-generators/example-codegenerators.html">Example Code Generators</a>
+        <a href="../../documentation/code-generators/vorto-codegenerators.html">Vorto Code Generators</a>
       
 
     </li>
@@ -855,14 +855,14 @@
 
 <p><a href="#code-generators-overview">Code Generators Overview</a></p>
 
-<p><a href="./example-codegenerators.html">Example Code Generators</a></p>
+<p><a href="./vorto-codegenerators.html">Vorto Code Generators</a></p>
 
 <h2 id="code-generators-overview">Code Generators Overview</h2>
 
 <p>By means of code generators, you can create information model based code artifacts which you can use in specific solutions. There are the following options to get an appropriate code generator:</p>
 
 <ul>
-  <li><a href="./example-codegenerators.html">Example Code Generators</a></li>
+  <li><a href="./vorto-codegenerators.html">Vorto Code Generators</a></li>
 </ul>
 
                 </div>
