--- a/documentation/overview/features.html
+++ b/documentation/overview/features.html
@@ -356,7 +356,7 @@
   
     <li  >
       
-        <a href="../../documentation/code-generators/example-codegenerators.html">Example Code Generators</a>
+        <a href="../../documentation/code-generators/vorto-codegenerators.html">Vorto Code Generators</a>
       
 
     </li>
@@ -866,7 +866,7 @@
   </li>
   <li>
     <p>Integrate devices into platforms easily with the help of platform specific <strong>code generators</strong>, for example Bosch, AWS, ThingWorx, etc. 
-Many example code generators illustrate the many possibilities of how code generators can be effectively used. They can also be taken as a code reference to implement your own generator with the Generator API.</p>
+Many code generators illustrate the many possibilities of how code generators can be effectively used. They can also be taken as a code reference to implement your own generator with the Generator API.</p>
 
     <p><img src="../../img/documentation/vorto_repository_generators.png" alt="Generators" width="700px" /></p>
   </li>
