--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ $(document).ready(function(){
  <img class="wow fadeInDown" src="./img/Code_generator_API_icon.png">
  </div>
  <div class="col-lg-3">
- <img class="wow fadeInDown" src="./img/Example_Code_Generators_icon.png">
+ <img class="wow fadeInDown" src="./img/Code_Generators_icon.png">
  </div>
  </div>
  <div class="row">
@@ -302,7 +302,7 @@ $(document).ready(function(){
  <p class="wow fadeInDown"><b>Code Generator API</b></p>
  </div>
  <div class="col-lg-3">
- <p class="wow fadeInDown"><b>Example Code Generators</b></p>
+ <p class="wow fadeInDown"><b>Code Generators</b></p>
  </div>
  </div>
  <br>
@@ -535,9 +535,6 @@ $(document).ready(function(){
 
 
   
-
-
-  
   
   <div class="box">
   
@@ -558,11 +555,14 @@ $(document).ready(function(){
 
     
       <h2 class="box-headline" id="header9">Integrate</h2>
-      <p>Code generators allow <b>Solution developers</b> to create information model based code artifacts that can be employed in specific solutions. Vorto provides wizards supporting the creation of new code generators. Example code generators are also part of the Vorto project.
+      <p>Code generators allow <b>Solution developers</b> to create information model based code artifacts that can be employed in specific solutions. Vorto provides wizards supporting the creation of new code generators.
 </p>
       </div>
   </div>
   <hr class="box-separator">
+  
+
+
   
 
 
@@ -930,9 +930,6 @@ $(document).ready(function(){
    
  
 <!--   -->
-   
- 
-<!--   -->
      <div class="container-fluid wow fadeInDown teamuc">
       <!-- Example row of columns -->
       <div class="row">
@@ -960,6 +957,9 @@ $(document).ready(function(){
     </div> 
     <!-- /container -->
   <!-- -->
+   
+ 
+<!--   -->
    
  
 <!--   -->
