--- a/documentation/vorto-repository/web-interface/userregistration.html
+++ b/documentation/vorto-repository/web-interface/userregistration.html
@@ -356,7 +356,7 @@
   
     <li  >
       
-        <a href="../../../documentation/code-generators/example-codegenerators.html">Example Code Generators</a>
+        <a href="../../../documentation/code-generators/vorto-codegenerators.html">Vorto Code Generators</a>
       
 
     </li>
