--- a/integrate.html
+++ b/integrate.html
@@ -117,7 +117,7 @@
 		<!-- /.container -->
 </nav>
 
-      <p>Code generators allow <b>Solution developers</b> to create information model based code artifacts that can be employed in specific solutions. Vorto provides wizards supporting the creation of new code generators. Example code generators are also part of the Vorto project.</p>
+      <p>Code generators allow <b>Solution developers</b> to create information model based code artifacts that can be employed in specific solutions. Vorto provides wizards supporting the creation of new code generators.</p>
 
     <!-- Footer -->
 <footer>
