Removed unneeded documentations and images

--- a/documentation/code-generators/vorto-codegenerators.html
+++ b/documentation/code-generators/vorto-codegenerators.html
@@ -356,7 +356,7 @@
   
     <li  >
       
-        <a href="../../documentation/code-generators/example-codegenerators.html">Example Code Generators</a>
+        <a href="../../documentation/code-generators/vorto-codegenerators.html">Vorto Code Generators</a>
       
 
     </li>
@@ -849,7 +849,7 @@
 					     <div class="span8 offset3">
                  <!--base to have relative path for offline navigation -->
 
-<h2 id="example-code-generators">Example Code Generators</h2>
+<h2 id="vorto-code-generators">Vorto Code Generators</h2>
 
 <p>Along with the Vorto Toolset, several code generators are installed (refer to <a href="https://github.com/eclipse/vorto/blob/master/server/generators/Readme.md">Vorto Code Generators</a>).</p>
 
