Updated screenshots for generators

--- a/documentation/appendix/datatype-dsl-reference.html
+++ b/documentation/appendix/datatype-dsl-reference.html
@@ -1194,13 +1194,12 @@ mandatory sex as Gender
 <table class="table table-bordered">
 	<tbody>
   <tr>
-    <td><i class="fa fa-info-circle info-note">&lt;/td&gt;
+    <td><i class="fa fa-info-circle info-note"></i></td>
     <td>To find out more about which language elements are available when writing a data type DSL, have a look at the respective DSL Reference. &lt;/br&gt;
     Use the keyboard shortcut <span style="font-variant:small-caps;">Ctrl + Space</span> to get a list of available DSL elements, that can be applied in the current scope you are in.</td>
-  &lt;/tr&gt;
-	&lt;/tbody&gt;
-&lt;/table&gt;
-</i></td></tr></tbody></table>
+  </tr>
+	</tbody>
+</table>
 
                 </div>
              </div>
