--- a/downloads/index.html
+++ b/downloads/index.html
@@ -223,8 +223,8 @@ Vorto is ready to be used."><i class="fa fa-download fa-2x"></i> <br> <b>Vorto U
 <td style="text-align: center; white-space: nowrap;">
 <a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones" data-toggle="tooltip" class="tip-right" title="Install Vorto using the Standard Eclipse Update mechanism:Choose Help -> Install New Software... from the menu bar and Add...
 Insert the update site URL [Vorto Update Site] Select the components of your choice and complete the wizard by clicking the Next button untilyou can click Finish. After a quick download and a restart of Eclipse,
-Vorto is ready to be used."><i class="fa fa-download fa-2x"></i> <br> <b>Vorto Update Site (Milestone)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></a>
-<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones/org.eclipse.vorto.update-site.zip" data-toggle="tooltip" class="tip-right" title="Download offline archive from [Vorto zip]. The user then adds this zip file from Help -> Install New Software -> Add -> Archive."><i class="fa fa-file-archive-o fa-2x"></i> <br> <b> Vorto zip (Milestone) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></a>
+Vorto is ready to be used."><i class="fa fa-download fa-2x"></i> <br> <b>Vorto Update Site (Milestone)</b></a>
+<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones/org.eclipse.vorto.update-site.zip" data-toggle="tooltip" class="tip-right" title="Download offline archive from [Vorto zip]. The user then adds this zip file from Help -> Install New Software -> Add -> Archive."><i class="fa fa-file-archive-o fa-2x"></i> <br> <b> Vorto zip (Milestone)</b></a>
 </td>
 </tr>
 
