Added blog post

--- a/documentation/appendix/releasenotes/0.10.0-M1.html
+++ b/documentation/appendix/releasenotes/0.10.0-M1.html
@@ -846,23 +846,21 @@
 <p>Here are a few major highlights:</p>
 
 <ul>
-  <li><strong>Web Editor</strong> that allows to create information-, function block- and datatype models and publish those to the Vorto Repository</li>
-  <li><strong>More Code Generators</strong> have been added to the list of existing generators</li>
-  <li><strong>Repository Java client</strong> to consume Vorto models from your Java application</li>
-  <li>Many <strong>bug fixes</strong> and minor <strong>improvements</strong></li>
+  <li><strong>Web Editor</strong> that allows to create information-, function block- and datatype models via a web-based editor.</li>
+  <li>More <strong>Code Generators</strong> have been added to the list of existing generators.</li>
+  <li><strong>Repository Java client</strong> API</li>
+  <li>Many bug fixes and improvements</li>
 </ul>
 
 <h3 id="web-editor">Web Editor</h3>
 
-<p>With the Web Editor, users can describe devices online and publish these as information models to the Vorto Repository.</p>
-
-<p><a href="http://vorto.eclipse.org/editor"><strong>Try out editor</strong></a></p>
+<p>With the <strong>Web Editor</strong>, users can describe devices online and publish these as information models to the Vorto Repository.</p>
 
 <p><img src="../../../img/documentation/webeditor_details.png" alt="WebEditor" width="700px" /></p>
 
 <h3 id="code-generators">Code Generators</h3>
 
-<p>Some more great code generators have been added for easier device integration.</p>
+<p>We have a few new Code Generators for easier device integration. Those are</p>
 
 <ul>
   <li>Alexa Skill-set Generator for Bosch IoT Suite</li>
@@ -901,7 +899,7 @@
 
 <h3 id="repository-java-client">Repository Java Client</h3>
 
-<p>With the Repository Java Client you can find information models and process its content as well as generate code for various IoT platforms. <a href="https://github.com/eclipse/vorto/blob/master/server/repo/repository-java-client/Readme.md">Click here for more info</a>.</p>
+<p>With the Repository Java Client you can find information models and process its content as well as generate code for various IoT platforms. <a href="&quot;https://github.com/eclipse/vorto/tree/development/server/repo/repository-java-client/Readme.md&quot;">Click here for more info</a>.</p>
 
 
                 </div>
