Fixed link to release notes

--- a/documentation/appendix/releasenotes/0.10.0-M1.html
+++ b/documentation/appendix/releasenotes/0.10.0-M1.html
@@ -899,7 +899,7 @@
 
 <h3 id="repository-java-client">Repository Java Client</h3>
 
-<p>With the Repository Java Client you can find information models and process its content as well as generate code for various IoT platforms. <a href="&quot;https://github.com/eclipse/vorto/tree/development/server/repo/repository-java-client/Readme.md&quot;">Click here for more info</a>.</p>
+<p>With the Repository Java Client you can find information models and process its content as well as generate code for various IoT platforms. <a href="https://github.com/eclipse/vorto/tree/master/server/repo/repository-java-client/Readme.md">Click here for more info</a>.</p>
 
 
                 </div>
