--- a/downloads/index.html
+++ b/downloads/index.html
@@ -139,7 +139,7 @@
 <main class="main">
 	<div class="drawer">
 		<nav aria-label="Navigation">
-  <a href="https://github.com/eclipse/vorto" class="project">
+  <a href="https://www.eclipse.org/vorto/" class="project">
     <div class="banner">
       
         <div class="logo">
@@ -189,9 +189,9 @@
 
 
 
-<a  title="Vorto" href="https://www.eclipse.org/vorto/eclipse-vorto/">
+<a  title="What is Vorto" href="https://www.eclipse.org/vorto/introduction">
 	
-	Vorto
+	What is Vorto
 </a>
 
 
@@ -330,7 +330,7 @@
 		<div class="wrapper">
 			<h1>Downloads </h1>
 
-			<p>To create informations Models you need to download the eclipse <a href="https://marketplace.eclipse.org/content/vorto-toolset">Vorto toolset</a> for you eclipse IDEs</p>
+			<p>To create Informations Models, you need to download the <a href="https://marketplace.eclipse.org/content/vorto-toolset">Vorto IoT Toolset plugins</a>.</p>
 
 
 			<aside class="copyright" role="note">
