--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -139,7 +139,7 @@
 <main class="main">
 	<div class="drawer">
 		<nav aria-label="Navigation">
-  <a href="https://github.com/eclipse/vorto" class="project">
+  <a href="https://www.eclipse.org/vorto/" class="project">
     <div class="banner">
       
         <div class="logo">
@@ -189,9 +189,9 @@
 
 
 
-<a  title="Vorto" href="https://www.eclipse.org/vorto/eclipse-vorto/">
+<a  title="What is Vorto" href="https://www.eclipse.org/vorto/introduction">
 	
-	Vorto
+	What is Vorto
 </a>
 
 
@@ -557,7 +557,7 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/eclipse-vorto/" title="What is Vorto ?">
+      <a href="https://www.eclipse.org/vorto/introduction/" title="What is Vorto?">
         <span class="direction">
           Previous
         </span>
@@ -567,7 +567,7 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
           </div>
           <div class="stretch">
             <div class="title">
-              What is Vorto ?
+              What is Vorto?
             </div>
           </div>
         </div>
