--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <main class="main">
 	<div class="drawer">
 		<nav aria-label="Navigation">
-  <a href="https://github.com/eclipse/vorto" class="project">
+  <a href="https://www.eclipse.org/vorto/" class="project">
     <div class="banner">
       
         <div class="logo">
@@ -192,9 +192,9 @@
 
 
 
-<a  title="Vorto" href="https://www.eclipse.org/vorto/eclipse-vorto/">
+<a  title="What is Vorto" href="https://www.eclipse.org/vorto/introduction">
 	
-	Vorto
+	What is Vorto
 </a>
 
 
@@ -328,6 +328,23 @@
 
 	<article class="article">
 		<div class="wrapper">
+			
+				<h1>Eclipse Vorto </h1>
+
+				<p><img src="https://www.eclipse.org/vorto/images/Vorto_Ar.png" alt="Material Screenshot" /></p>
+
+<blockquote>
+<p>Interaction among different stakeholders via Vorto</p>
+</blockquote>
+
+<p>Vorto provides an Eclipse Toolset that allows Device Manufacturers to easily describe device functionality and characteristics as Information Models. These models are managed in a <a href="http://vorto.eclipse.org/">Vorto Repository</a>. Platform Providers provide <a href="http://vorto.eclipse.org/#/generators">Code generators</a> that convert these models into device - specific &ldquo;stubs&rdquo; that run on the device and send Information Model compliant messages to the platform-specific IoT Backend. In order to process these messages in the IoT backend, Vorto offers a set of convenient technical components, for example parsers and validators. For devices sending arbitrary, non-Vorto, messages to an IoT backend, e.g. in binary format, the Vorto Mapping Library helps to transform device messages to IoT Platform specific format, e.g. to Eclipse Ditto or AWS IoT Shadow.</p>
+
+<p><img src="https://www.eclipse.org/vorto/images/vorto_technicalview.png" alt="Material Screenshot" /></p>
+
+<blockquote>
+<p>Technical View</p>
+</blockquote>
+
 			
 
 			<aside class="copyright" role="note">
