--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -139,7 +139,7 @@
 <main class="main">
 	<div class="drawer">
 		<nav aria-label="Navigation">
-  <a href="https://github.com/eclipse/vorto" class="project">
+  <a href="https://www.eclipse.org/vorto/" class="project">
     <div class="banner">
       
         <div class="logo">
@@ -189,9 +189,9 @@
 
 
 
-<a  title="Vorto" href="https://www.eclipse.org/vorto/eclipse-vorto/">
+<a  title="What is Vorto" href="https://www.eclipse.org/vorto/introduction">
 	
-	Vorto
+	What is Vorto
 </a>
 
 
