--- a/introduction/index.html
+++ b/introduction/index.html
@@ -290,6 +290,24 @@
 </li>
 
 
+
+<li>
+  
+    
+
+
+
+<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+	
+	Documentation
+</a>
+
+
+
+  
+</li>
+
+
         </ul>
         
 
@@ -387,14 +405,14 @@
 
   <div class="next">
   
-      <a href="https://www.eclipse.org/vorto/getting-started/" title="Getting Started">
+      <a href="https://www.eclipse.org/vorto/documentation/" title="Documentation">
         <span class="direction">
           Next
         </span>
         <div class="page">
           <div class="stretch">
             <div class="title">
-              Getting Started
+              Documentation
             </div>
           </div>
           <div class="button button-next" role="button" aria-label="Next">
