--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -293,6 +293,24 @@
 </li>
 
 
+
+<li>
+  
+    
+
+
+
+<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+	
+	Documentation
+</a>
+
+
+
+  
+</li>
+
+
         </ul>
         
 
@@ -332,7 +350,7 @@
 
 			
 
-<h2 id="connecting-a-grovepi">Connecting a GrovePi</h2>
+<h2 id="connecting-a-grovepi-to-eclipse-hono">Connecting a GrovePi to Eclipse Hono</h2>
 
 <p>This tutorial explains how to generate a simple Python application for you GrovePi that sends sensor data to Eclipse Hono using MQTT.</p>
 
@@ -519,7 +537,7 @@ sudo reboot
 
 <hr />
 
-<h2 id="connecting-a-esp8266-arduino">Connecting a ESP8266 (Arduino)</h2>
+<h2 id="connecting-a-esp8266-arduino-to-eclipse-hono">Connecting a ESP8266 (Arduino) to Eclipse Hono</h2>
 
 <p>This tutorial explains how to generate an Arduino sketch for a given Information Model and send the device data to Eclipse Hono via MQTT.</p>
 
