added more DSL reference doc

--- a/installation/grovepi/index.html
+++ b/installation/grovepi/index.html
@@ -297,9 +297,9 @@
 
 
 
-<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+<a  title="Reference Documentation" href="https://www.eclipse.org/vorto/documentation/">
 	
-	Documentation
+	Reference Documentation
 </a>
 
 
