--- a/introduction/index.html
+++ b/introduction/index.html
@@ -297,9 +297,9 @@
 
 
 
-<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+<a  title="Reference Documentation" href="https://www.eclipse.org/vorto/documentation/">
 	
-	Documentation
+	Reference Documentation
 </a>
 
 
@@ -405,14 +405,14 @@
 
   <div class="next">
   
-      <a href="https://www.eclipse.org/vorto/documentation/" title="Documentation">
+      <a href="https://www.eclipse.org/vorto/getting-started/" title="Getting Started">
         <span class="direction">
           Next
         </span>
         <div class="page">
           <div class="stretch">
             <div class="title">
-              Documentation
+              Getting Started
             </div>
           </div>
           <div class="button button-next" role="button" aria-label="Next">
