--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -300,9 +300,9 @@
 
 
 
-<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+<a  title="Reference Documentation" href="https://www.eclipse.org/vorto/documentation/">
 	
-	Documentation
+	Reference Documentation
 </a>
 
 
@@ -712,7 +712,7 @@ const char* password = &quot;&lt;ENTER YOUR WIFI PASSWORD&gt;&quot;;
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/getting-started/" title="Getting Started">
+      <a href="https://www.eclipse.org/vorto/documentation/" title="Reference Documentation">
         <span class="direction">
           Previous
         </span>
@@ -722,7 +722,7 @@ const char* password = &quot;&lt;ENTER YOUR WIFI PASSWORD&gt;&quot;;
           </div>
           <div class="stretch">
             <div class="title">
-              Getting Started
+              Reference Documentation
             </div>
           </div>
         </div>
