--- a/downloads/index.html
+++ b/downloads/index.html
@@ -300,9 +300,9 @@
 
 
 
-<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+<a  title="Reference Documentation" href="https://www.eclipse.org/vorto/documentation/">
 	
-	Documentation
+	Reference Documentation
 </a>
 
 
