--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -300,9 +300,9 @@
 
 
 
-<a  title="Documentation" href="https://www.eclipse.org/vorto/documentation/">
+<a  title="Reference Documentation" href="https://www.eclipse.org/vorto/documentation/">
 	
-	Documentation
+	Reference Documentation
 </a>
 
 
@@ -575,7 +575,7 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/documentation/" title="Documentation">
+      <a href="https://www.eclipse.org/vorto/introduction/" title="What is Vorto?">
         <span class="direction">
           Previous
         </span>
@@ -585,7 +585,7 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
           </div>
           <div class="stretch">
             <div class="title">
-              Documentation
+              What is Vorto?
             </div>
           </div>
         </div>
@@ -595,14 +595,14 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
 
   <div class="next">
   
-      <a href="https://www.eclipse.org/vorto/tutorials/" title="Tutorials">
+      <a href="https://www.eclipse.org/vorto/documentation/" title="Reference Documentation">
         <span class="direction">
           Next
         </span>
         <div class="page">
           <div class="stretch">
             <div class="title">
-              Tutorials
+              Reference Documentation
             </div>
           </div>
           <div class="button button-next" role="button" aria-label="Next">
