fixed some typos

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -354,7 +354,7 @@
 
 <p>This section lists the steps required to install the Vorto Toolset.</p>
 
-<p>Install the Eclipse Vorto Toolset in one of the following three ways:</p>
+<p>Install the Eclipse Vorto Toolset in one of the following ways:</p>
 
 <ul>
 <li><a href="#installing-from-the-eclipse-marketplace">Installing from the Eclipse Marketplace</a><br /></li>
