split up tutorials and dsl reference documentation into individual pages

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -207,7 +207,7 @@
 
 
 
-<a  title="Getting started" href="https://www.eclipse.org/vorto/getting-started/">
+<a  title="Getting started" href="https://www.eclipse.org/vorto/gettingstarted/">
 	
 	Getting started
 </a>
@@ -542,14 +542,14 @@
 
   <div class="next">
   
-      <a href="https://www.eclipse.org/vorto/installation/grovepi/" title="Installation Python and GrovePi required modules">
+      <a href="https://www.eclipse.org/vorto/documentation/metamodel_uml/" title="Vorto Meta Model">
         <span class="direction">
           Next
         </span>
         <div class="page">
           <div class="stretch">
             <div class="title">
-              Installation Python and GrovePi required modules
+              Vorto Meta Model
             </div>
           </div>
           <div class="button button-next" role="button" aria-label="Next">
