--- a/downloads/index.html
+++ b/downloads/index.html
@@ -207,7 +207,7 @@
 
 
 
-<a  title="Getting started" href="https://www.eclipse.org/vorto/getting-started/">
+<a  title="Getting started" href="https://www.eclipse.org/vorto/gettingstarted/">
 	
 	Getting started
 </a>
@@ -513,7 +513,7 @@ After the installation is complete the <strong>Software Updates</strong> dialog 
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/tutorials/" title="Tutorials">
+      <a href="https://www.eclipse.org/vorto/tutorials/arduino/" title="Connecting a ESP8266 (Arduino) to Hono">
         <span class="direction">
           Previous
         </span>
@@ -523,7 +523,7 @@ After the installation is complete the <strong>Software Updates</strong> dialog 
           </div>
           <div class="stretch">
             <div class="title">
-              Tutorials
+              Connecting a ESP8266 (Arduino) to Hono
             </div>
           </div>
         </div>
